[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arborist"
version = "0.1.0"
description = "A tool to rank SNV phylogenies inferred from bulk DNA sequencing via low-pass scDNA-seq data."
authors = [
    { name = "Leah L. Weber", email = "llweber@mdanderson.org" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "scipy",
    "pandas"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
arborist = "arborist.arborist:main"