[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arborist"
version = "0.1.0"
description = "A tool to rank SNV phylogenies inferred from bulk DNA sequencing via low-pass scDNA-seq data."
authors = [
    { name = "Leah L. Weber", email = "llweber@mdanderson.org" },
    { name = "Chiyin Ching", email = "CChing@mdanderson.org"}
  
]
license = { text = "BSD-3-Clause" } 
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent"
]

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "pygraphviz"
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
arborist = "arborist.arborist:main"
arborist-base = "arborist.arborist_base:main"
cmb = "arborist.cmb:main"